--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "socket.io": "^4.7.2",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.4",
+    "vue-socket.io": "^3.0.10",
     "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.1.0"
   },
