--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^4.0.7",
     "axios": "^1.4.0",
     "socket.io": "^4.7.2",
     "vue": "^3.3.4",
