--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tinymce/tinymce-vue": "^4.0.7",
     "axios": "^1.4.0",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.4",
